--- a/stream-two.html
+++ b/stream-two.html
@@ -14,34 +14,28 @@
 		</nav>
 		<h1>Stream Two</h1>
 		<div class="card">
-			<a href="https://en.wikipedia.org/wiki/Python_(programming_language)">Python</a>
 			<img src="https://www.python.org/static/opengraph-icon-200x200.png" />
-			<h2>Python</h2>
+			<h2><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">Python</a></h2>
 		</div>
 		<div class="card">
-			<a href="https://en.wikipedia.org/wiki/Flask_(web_framework)">Flask</a>
 			<img src="http://flask.pocoo.org/static/logo/flask.png" />
-			<h2>Flask</h2>		
+			<h2><a href="https://en.wikipedia.org/wiki/Flask_(web_framework)">Flask</a></h2>		
 			</div>
 		<div class="card">
-			<a href="https://en.wikipedia.org/wiki/MongoDB">MongoDB</a>
 			<img src="https://webassets.mongodb.com/_com_assets/cms/MongoDB-Logo-5c3a7405a85675366beb3a5ec4c032348c390b3f142f5e6dddf1d78e2df5cb5c.png" />
-			<h2>MongoDB</h2>		
+			<h2><a href="https://en.wikipedia.org/wiki/MongoDB">MongoDB</a></h2>		
 		</div>
 		<div class="card">
-			<a href="https://en.wikipedia.org/wiki/MySQL">MySQL</a>
 			<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/62/MySQL.svg/1200px-MySQL.svg.png" />
-			<h2>MySQL</h2>		
+			<h2><a href="https://en.wikipedia.org/wiki/MySQL">MySQL</a></h2>		
 		</div>
 		<div class="card">
-			<a href="https://en.wikipedia.org/wiki/Git">Git</a>
 			<img src="https://git-scm.com/images/logo@2x.png" />
-			<h2>Git</h2>		
+			<h2><a href="https://en.wikipedia.org/wiki/Git">Git</a></h2>		
 		</div>
 		<div class="card">
-			<a href="https://en.wikipedia.org/wiki/GitHub">Github</a>
 			<img src="https://assets-cdn.github.com/images/modules/open_graph/github-logo.png" />
-			<h2>Github</h2>		
+			<h2><a href="https://en.wikipedia.org/wiki/GitHub">Github</a></h2>		
 			</div>
 		
 	</body>
