Updated image tags with alt attribute

--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
 		</nav>
 		<h1>Stream One</h1>
 		<div class="card">
-			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1200px-HTML5_logo_and_wordmark.svg.png" />
+			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1200px-HTML5_logo_and_wordmark.svg.png" alt="HTML image" />
 			<h2><a href="https://en.wikipedia.org/wiki/HTML5">HTML5</a></h2>
 		</div>
 		<div class="card">
-			<img src="https://fthmb.tqn.com/zrcb1zA4Vi47uULJhJKJdcshBgk=/1024x1024/filters:fill(auto,1)/css3-57b597e85f9b58b5c2b338de.png" />
+			<img src="https://fthmb.tqn.com/zrcb1zA4Vi47uULJhJKJdcshBgk=/1024x1024/filters:fill(auto,1)/css3-57b597e85f9b58b5c2b338de.png" alt="CSS image" />
 			<h2><a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">CSS</a></h2>		
 			</div>
 		<div class="card">
-			<img src="https://www.javatpoint.com/images/javascript/javascript_logo.png" />
+			<img src="https://www.javatpoint.com/images/javascript/javascript_logo.png" alt="Javascript image" />
 			<h2><a href="https://en.wikipedia.org/wiki/JavaScript">Javascript</a></h2>		
 		</div>
 		<div class="card">
-			<img src="https://d1u5p3l4wpay3k.cloudfront.net/lolesports_gamepedia_en/thumb/f/fd/Cloud9.png/1200px-Cloud9.png" />
+			<img src="https://d1u5p3l4wpay3k.cloudfront.net/lolesports_gamepedia_en/thumb/f/fd/Cloud9.png/1200px-Cloud9.png" alt=" Cloud 9 image" />
 			<h2><a href="https://en.wikipedia.org/wiki/Cloud9_IDE">Cloud 9</a></h2>		
 		</div>
 		<div class="card">
-			<img src="https://git-scm.com/images/logo@2x.png" />
+			<img src="https://git-scm.com/images/logo@2x.png" alt="Git image" />
 			<h2><a href="https://en.wikipedia.org/wiki/Git">Git</a></h2>		
 		</div>
 		<div class="card">
-			<img src="https://assets-cdn.github.com/images/modules/open_graph/github-logo.png" />
+			<img src="https://assets-cdn.github.com/images/modules/open_graph/github-logo.png" alt="Github image"/>
 			<h2><a href="https://en.wikipedia.org/wiki/GitHub">Github</a></h2>		
 			</div>
 	</body>
