--- a/stream-two.html
+++ b/stream-two.html
@@ -14,27 +14,27 @@
 		</nav>
 		<h1>Stream Two</h1>
 		<div class="card">
-			<img src="https://www.python.org/static/opengraph-icon-200x200.png" />
+			<img src="https://www.python.org/static/opengraph-icon-200x200.png" alt="Python image"/>
 			<h2><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">Python</a></h2>
 		</div>
 		<div class="card">
-			<img src="http://flask.pocoo.org/static/logo/flask.png" />
+			<img src="http://flask.pocoo.org/static/logo/flask.png" alt="Flask image"/>
 			<h2><a href="https://en.wikipedia.org/wiki/Flask_(web_framework)">Flask</a></h2>		
 			</div>
 		<div class="card">
-			<img src="https://webassets.mongodb.com/_com_assets/cms/MongoDB-Logo-5c3a7405a85675366beb3a5ec4c032348c390b3f142f5e6dddf1d78e2df5cb5c.png" />
+			<img src="https://webassets.mongodb.com/_com_assets/cms/MongoDB-Logo-5c3a7405a85675366beb3a5ec4c032348c390b3f142f5e6dddf1d78e2df5cb5c.png" alt="MongoDB image" />
 			<h2><a href="https://en.wikipedia.org/wiki/MongoDB">MongoDB</a></h2>		
 		</div>
 		<div class="card">
-			<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/62/MySQL.svg/1200px-MySQL.svg.png" />
+			<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/62/MySQL.svg/1200px-MySQL.svg.png" alt="MySQL image"/>
 			<h2><a href="https://en.wikipedia.org/wiki/MySQL">MySQL</a></h2>		
 		</div>
 		<div class="card">
-			<img src="https://git-scm.com/images/logo@2x.png" />
+			<img src="https://git-scm.com/images/logo@2x.png" alt="Git image" />
 			<h2><a href="https://en.wikipedia.org/wiki/Git">Git</a></h2>		
 		</div>
 		<div class="card">
-			<img src="https://assets-cdn.github.com/images/modules/open_graph/github-logo.png" />
+			<img src="https://assets-cdn.github.com/images/modules/open_graph/github-logo.png" alt="Github image"/>
 			<h2><a href="https://en.wikipedia.org/wiki/GitHub">Github</a></h2>		
 			</div>
 		
