--- a/stream-three.html
+++ b/stream-three.html
@@ -14,27 +14,27 @@
 		</nav>
 		<h1>Stream Three</h1>
 		<div class="card">
-			<img src="https://www.python.org/static/opengraph-icon-200x200.png" />
+			<img src="https://www.python.org/static/opengraph-icon-200x200.png" alt="Python image" />
 			<h2><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">Python</a></h2>
 		</div>
 		<div class="card">
-			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Django_logo.svg/1200px-Django_logo.svg.png" />
+			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Django_logo.svg/1200px-Django_logo.svg.png" alt="Django image"/>
 			<h2><a href="https://en.wikipedia.org/wiki/Django_(web_framework)">Django</a></h2>		
 			</div>
 		<div class="card">
-			<img src="https://camo.githubusercontent.com/4516b2f84a7280e0ec5dafc97ec8808ab991a954/68747470733a2f2f63646e2e776f726c64766563746f726c6f676f2e636f6d2f6c6f676f732f6865726f6b752e737667" />
+			<img src="https://camo.githubusercontent.com/4516b2f84a7280e0ec5dafc97ec8808ab991a954/68747470733a2f2f63646e2e776f726c64766563746f726c6f676f2e636f6d2f6c6f676f732f6865726f6b752e737667" alt="Heroku image" />
 			<h2><a href="https://en.wikipedia.org/wiki/Heroku">Heroku</a></h2>		
 		</div>
 		<div class="card">
-			<img src="https://git-scm.com/images/logo@2x.png" />
+			<img src="https://git-scm.com/images/logo@2x.png" alt="Git image"/>
 			<h2><a href="https://en.wikipedia.org/wiki/Git">Git</a></h2>		
 		</div>
 		<div class="card">
-			<img src="https://assets-cdn.github.com/images/modules/open_graph/github-logo.png" />
+			<img src="https://assets-cdn.github.com/images/modules/open_graph/github-logo.png" alt="Github image"/>
 			<h2><a href="https://en.wikipedia.org/wiki/GitHub">Github</a></h2>		
 		</div>
 			<div class="card">
-			<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/62/MySQL.svg/1200px-MySQL.svg.png" />
+			<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/62/MySQL.svg/1200px-MySQL.svg.png" alt="MySQL image" />
 			<h2><a href="https://en.wikipedia.org/wiki/MySQL">MySQL</a></h2>		
 		</div>
 		
